Fix light and dark modes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
+@use '@angular/material' as mat;
+
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-
-  color: #0f0f0f;
-  background-color: #f6f6f6;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,18 +32,6 @@
   align-items: center;
   gap: 10px;
   margin-bottom: 8px;
-}
-
-.logo {
-  height: 6em;
-  margin: 1em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
 }
 
 .row {
@@ -74,8 +62,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  color: #0f0f0f;
-  background-color: #ffffff;
   transition: border-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
@@ -84,24 +70,27 @@ button {
   cursor: pointer;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #f6f6f6;
-    background-color: #2f2f2f;
-  }
-
-  a:hover {
-    color: #24c8db;
-  }
-
-  input,
-  button {
-    color: #ffffff;
-    background-color: #0f0f0f98;
-  }
-  button:active {
-    background-color: #0f0f0f69;
-  }
+body {
+  color-scheme: light dark;
+  background-color: #e0e0e0;
+  @include mat.theme((
+    color: mat.$blue-palette,
+    typography: Roboto,
+    density: 0
+  ));
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #e0e0e0;
+    background-color: #2f2f2f;
+    @include mat.theme((
+      color: mat.$blue-palette,
+      typography: Roboto,
+      density: 0,
+
+    ));
+  }
+}
